--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="sv">
     <head>
          <meta charset="UTF-8">
          <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -76,7 +76,7 @@
                      </div>
                      <div class="value">
                          <p>
-                           Jun 1, 1986
+                            6/1986
                          </p>
                      </div>
                  </div>
@@ -206,10 +206,10 @@
                             <span class="progress-type2">engelsk</span>
                         </div>
                         <div class="progress">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 35%;">
-                                <span class="sr-only">30% complete</span>
+                            <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 40%;">
+                                <span class="sr-only">35% complete</span>
                             </div>
-                            <span class="progress-type2">svenska/span>
+                            <span class="progress-type2">svenska</span>
                         </div>
                         <div class="progress">
                             <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 99%;">
@@ -305,12 +305,7 @@
                       </a>
                   </p>
                 </div>
-                <div class="col-sm-4">
-                   <h5 class="uppercase general-sub">Intressen</h5>
-                   <p class="inline-block">
-                    Musik, spela gitarr, laga mat, resa, lära sig nya färdigheter och lära sig språk.
-                 </p>
-                </div>
+                
             </div>
      </footer>
 </body>
